omni/tests/goldens/types/unknown_type_03.err
tests/goldens/types/unknown_type_03.omni:1:12: error: unknown type "Mystery3"
  let value3:Mystery3 = 1
             ^~~ hint: import or declare the type before use
tests/goldens/types/unknown_type_03.omni:1:1: error: cannot assign int to Mystery3
  let value3:Mystery3 = 1
  ^~~ hint: adjust the expression or type annotation
